# OpenSnap

./: .env.example  .gitignore  README.md  background.js  build_and_copy.sh  content.js  manifest.json  package.json  pnpm-lock.yaml  popup.html  popup.js  pyproject.toml  restart.sh  server.py  setup.cfg  sites.js
backend/: pyproject.toml
backend/saveit/db/: database.py  models.py
backend/tests/: capture.py  next_cap2.py
chunks/: ccip-DIiruOCZ.js  ccip-DVW758cg.js  id_ID-XEJUOSPY-CAHQ7PdL.js  index-CO-KgJ0C.js  index-CR81hy21.js  index-DzdZ1aon.js  index-YCAvn8Xy.js  index.es-BMrjb-DK.js  index.es-w-yoxt7Y.js  ja_JP-Y2UY5DJF-Wq9BQylr.js  popup-BlC-126i.js  popup-BstinIAk.js
components/: button.tsx  separator.tsx
content-scripts/: content.js
entrypoints/popup/: App.tsx  main.tsx
frontend/: wxt.config.ts
frontend/lib/: utils.ts
frontend/opensnap/: manifest.json
opensnap/: content.js  manifest.json  popup.html
opensnap/assets/: popup-DRaT5ct8.css
opensnap/chunks/: ccip-BXW93R3c.js  ccip-BXzzrWhS.js  ccip-BwD5DhOr.js  ccip-CETApNde.js  ccip-vUtABfVp.js  es_419-HHD3PTWJ-DoA5fT4K.js  hi_IN-6LCB42ZP-D_kB30vx.js  index--QDBuviV.js  index-BLEYcpqa.js  index-BLMIWcpG.js  index-BOFvc4ZR.js  index-Bv1pr8xw.js  index-C39mJ2AK.js  index-Cg8YgHd3.js  index-ChuwH3kJ.js  index-I-YM6xJ2.js  index-ZNS7VYQL.js  index-mg2ybvIN.js  index.es-BjbZdDaX.js  index.es-DOW2YG8P.js  index.es-DZrsEwNE.js  (+14 more)
options/: popup.html  popup.js  popup_switch.css
saveit/: app.py  background.js  main.py  manifest.json  popup.html
tests/: mhtml server - Google Search.mhtml  next_cap.py
(+37 files in other folders)
